add ignore item and delete some file

--- a/myconsumer/.gitignore
+++ b/myconsumer/.gitignore
@@ -12,10 +12,11 @@ HELP.md
 .sts4-cache
 
 ### IntelliJ IDEA ###
-.idea
+.idea/
 *.iws
 *.iml
 *.ipr
+.mvn/
 
 ### NetBeans ###
 /nbproject/private/
