--- a/myprovider/src/main/resources/application.properties
+++ b/myprovider/src/main/resources/application.properties
@@ -2,3 +2,32 @@ spring.application.name=provider
 
 server.port=8844
 spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
+
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.druid.password=root
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/order?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowMultiQueries=true
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.druid.initial-size=10
+spring.datasource.druid.min-idle=10
+spring.datasource.druid.max-active=10
+spring.datasource.druid.max-wait=10
+spring.datasource.druid.time-between-eviction-runs-millis=6000
+spring.datasource.druid.validation-query=SELECT 'x' FROM DUAL
+spring.datasource.druid.min-evictable-idle-time-millis=3000
+spring.datasource.druid.test-while-idle=true
+spring.datasource.druid.test-on-borrow=false
+spring.datasource.druid.test-on-return=false
+spring.datasource.druid.pool-prepared-statements=true
+spring.datasource.druid.use-global-data-source-stat=true
+
+mybatis-plus.mapper-locations=classpath:mapper/*.xml
+mybatis-plus.type-aliases-package=com.mynacos.myprovider.mapper
+mybatis-plus.global-config.db-config.id-type=auto
+mybatis-plus.global-config.db-config.field-strategy=default
+mybatis-plus.configuration.map-underscore-to-camel-case=true
+mybatis-plus.configuration.cache-enabled=true
+
+
+logging.level.com.mynacos.myprovider=debug
+
